[tool.poetry]
name = "pubsubpp"
version = "0.1.0"
description = ""
authors = ["VChaplanov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
conan = "^2.6.0"
cmakelang = "^0.6.13"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
codespell = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
